outstanding, magnificent changes to the intro. best you'll ever see

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -164,6 +164,26 @@
 }
 
 
+@book{kaufman2010handbook,
+  title={The Cambridge handbook of creativity},
+  author={Kaufman, James C and Sternberg, Robert J},
+  publisher="Cambridge University Press",
+  address="New York",
+  year={2010},
+}
+
+@article{kemp2014taxonomy,
+  title={A taxonomy of inductive problems},
+  author={Kemp, Charles and Jern, Alan},
+  journal={Psychonomic bulletin \& review},
+  volume={21},
+  number={1},
+  pages={23--46},
+  year={2014},
+  publisher={Springer}
+}
+
+
 @incollection{kozbelt2010theories,
   author={Kozbelt, Aaron and Beghetto, Ronald A and Runco, Mark A},
   title={Theories of creativity},
@@ -225,6 +245,17 @@
   volume = {23},
   pages = {2023-2027},
   year = {2013}
+}
+
+@article{markman2003category,
+  title={Category use and category learning.},
+  author={Markman, Arthur B and Ross, Brian H},
+  journal={Psychological bulletin},
+  volume={129},
+  number={4},
+  pages={592},
+  year={2003},
+  publisher={American Psychological Association}
 }
 
 @book{margolis2015,
