--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -87,6 +87,47 @@ The ability to creatively generate new concepts and ideas is among the most fasc
 \section{Introduction}
 \setlength\parindent{0.5in}
 
+
+The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study. Although we tend to focus on the most salient products of the processes underlying creative generation (e.g., scientific breakthroughs), every person is likely to have generated many novel concepts in ordinary life. Questions concerning the generation of novel concepts are typically addressed within research on creativity, which utilizes a diverse collection of empirical and theoretical approaches \citep[see][]{kaufman2010handbook}. However, due to the difficult nature of studying creative generation, this work infrequently employs computational methods to evaluate proposed processes and representations. 
+
+In this paper, we approach the problem of creativity in terms of
+
+In particular, generating a member of a novel category can be considered as a `special case' application of existing category knowledge \cite{kemp2014taxonomy}: whereas research in categorization typically addresses how knowledge is used to classify items into known categories \citep[e.g.,][]{shepard1961learning,nosofsky1994comparing} or infer unobserved features of known category members \citep[see][]{markman2003category}. The generation of members of new categorires can be considered as a special case of such an inference 
+
+Classification consist of selecting a category label given observed features, and feature inference consists of inferring the value of a missing feature given a set of observed features and a category label, generation of new category members requires individuals to infer all feature values given a novel category label.
+
+
+Many aspects of the creative process, however, are not altogether different from cognitive processes typically studied in laboratories. In particular, creating members of a new category can be considered a form of inference using one's knowledge of categories.
+
+
+
+Computational methods, nonetheless, have proven fruitful in advancing research in a wide variety
+
+
+% Question: How do people create new concepts?
+%     + [Maybe an example of this here, maybe not.]
+
+% Typically this question is approached from the lit on creativity, which uses a wide variety of approaches such as [X], [Y], [etc]
+
+% While traditional approaches have made great advances, they make it difficult to formalize the creative processes within a computational modeling framework.
+%     + [Maybe a line about how computational approaches have been fruitful in other fields, or how we'd ideally like to create machines with the creative capacity of humans.]
+
+% Many aspects of the creative process, however, are not altogether different from cognitive processes typically studied in laboratories. In particular, creating members of a new category can be considered a form of inference using one's knowledge of categories.
+%     + [Show some depiction of different types of inferences using category knowledge (classification, inference, generation), maybe that table.]
+%     + [Cite that Kemp taxonomy paper, Ken's PLM chapter.]
+
+% Under this framing, the generation of categories can be studied using toolkit of categorization. 
+
+% However, this application of category knowledge has been broadly under-explored within the literature on categorization.
+%     + [Progress in this area not only informs our understanding of creativity, but also categorization]
+
+% Foundational work on the topic [ward intro] ...
+%     + [From here, we can probably append the intro as is, starting from the creative cognition section.]
+
+
+
+
+
 Creativity, innovation, imagination, and the creation of new ideas are among the most fascinating, important and difficult human capabilities to study. They are fascinating and important capabilities because they have produced some of the greatest scientific breakthroughs that revolutionized the world. Unfortunately, technological and scientific breakthroughs are rare and the result of a great deal of cognitive effort, which makes it difficult to investigate the underlying cognitive representations and processes responsible for them using standard experimental methodology or to formalize them in computational models. Although we tend to focus on the most salient products of these processes (e.g., scientific breakthroughs), every person is likely to have generated many novel sentences, thoughts, and/or drawings given the combinatorial explosion of possible statements given a reasonably-sized set of primitive elements and combination rules in language, thought, and perception \citep{goldstone2003}. This observation provides a fantastic opportunity: By examining how people create new concepts in a domain amenable to formalizing in computational models, we can investigate (some aspects of) creativity, innovation, and imagination scientifically.
 
 Towards the aim of providing a formal account of the cognitive mechanisms involved in creativity and innovation, we explore a form of creative cognition that can be studied using standard behavioral methodology and is amenable to formal modeling: category generation. In a category generation task, participants are given some background knowledge about a domain (a cover story and/or learning one or more categories in the domain) and then are asked to generate another category in the domain. Unlike creativity and innovation, categorization is well studied from a breadth of perspectives, including behavioral, neural, comparative, and computational  \citep{kurtz2015human,mack2013,margolis2015,pothoswills2011}. By analyzing a creative task using formal tools from the categorization literature, we can formalize some theories of creativity and test them empirically in a more rigorous manner. 
