refining, PERFECTING, changes to the intro

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -88,11 +88,17 @@ The ability to creatively generate new concepts and ideas is among the most fasc
 \setlength\parindent{0.5in}
 
 
-The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study. Although we tend to focus on the most salient products of the processes underlying creative generation (e.g., scientific breakthroughs), every person is likely to have generated many novel concepts in ordinary life. Questions concerning the generation of novel concepts are typically addressed within research on creativity, which utilizes a diverse collection of empirical and theoretical approaches \citep[see][]{kaufman2010handbook}. However, due to the difficult nature of studying creative generation, this work infrequently employs computational methods to evaluate proposed processes and representations. 
+The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study. Although we tend to focus on the most salient products of the processes underlying creative generation (e.g., scientific breakthroughs), every person is likely to have generated many novel concepts in ordinary life. 
 
-In this paper, we approach the problem of creativity in terms of
+Questions concerning the generation of novel concepts are typically addressed within research on creativity, which utilizes a diverse collection of empirical and theoretical approaches \citep[see][]{kaufman2010handbook}. 
 
-In particular, generating a member of a novel category can be considered as a `special case' application of existing category knowledge \cite{kemp2014taxonomy}: whereas research in categorization typically addresses how knowledge is used to classify items into known categories \citep[e.g.,][]{shepard1961learning,nosofsky1994comparing} or infer unobserved features of known category members \citep[see][]{markman2003category}. The generation of members of new categorires can be considered as a special case of such an inference 
+However, due to the difficult nature of studying creative generation, this work infrequently employs computational methods to evaluate proposed processes and representations. 
+
+In this paper, we assume a different approach to studying the generation of novel concepts.
+
+In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on classification \citep[predicting the category given feature information, see][]{shepard1961learning,nosofsky1994comparing} and inference \citep[predicting unobserved features given observed features and a category label, see][]{markman2003category}. Under this framing, the generation of new category members consists of inferring the {\em all} features given a novel category label. Thus, we can make progress in developing formal theories of creative generation by extending theories of categorization to the task of category generation.
+
+ whereas research in categorization typically addresses how knowledge is used to classify items into known categories  or infer unobserved features of known category members \citep[see][]{markman2003category}. The generation of members of new categories can be considered as a special case of such an inference 
 
 Classification consist of selecting a category label given observed features, and feature inference consists of inferring the value of a missing feature given a set of observed features and a category label, generation of new category members requires individuals to infer all feature values given a novel category label.
 
