more intro updates

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -88,26 +88,14 @@ The ability to creatively generate new concepts and ideas is among the most fasc
 \setlength\parindent{0.5in}
 
 
-The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study. Although we tend to focus on the most salient products of the processes underlying creative generation (e.g., scientific breakthroughs), every person is likely to have generated many novel concepts in ordinary life. 
+The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study.  We tend to focus on the most salient products of the processes underlying conceptual generation (e.g., scientific breakthroughs), but every person is likely to have generated many novel concepts in ordinary life -- indeed, the generation of novel sentences, works of art, and so on may also be considered as products of our capacity to create new concepts. Although this capacity is of great interest, it is also of great complexity and can be difficult to study in a typical laboratory setting. By consequence, we do not have a strong understanding of the representations and processes involved in the generation of new concepts.
 
-Questions concerning the generation of novel concepts are typically addressed within research on creativity, which utilizes a diverse collection of empirical and theoretical approaches \citep[see][]{kaufman2010handbook}. 
+Questions concerning the generation of novel concepts are typically addressed within research on creativity, a tremendously diverse field employing a multitude of experimental and theoretical approaches \citep[see][]{kaufman2010handbook}. The processes underlying conceptual generation are commonly addressed using a creative cognition approach \citep{finke1992creative, smith1995creative}, in which the products of creative acts (such as drawings) are analyzed to obtain insights into how they might have been created. While these approaches have made great advances in our understanding of creativity, the focus on creative {\em products} makes difficult the task of formalizing proposed processes and representations within a computational modeling framework, and so the field does not benefit from the application of computational models to evaluate theories.
 
-However, due to the difficult nature of studying creative generation, this work infrequently employs computational methods to evaluate proposed processes and representations. 
+\nbcnote{Maybe a bit about why that would be good?}
 
-In this paper, we assume a different approach to studying the generation of novel concepts.
+However, many of these proposed processes are not altogether different from cognitive processes typically studied in laboratories. In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on classification \citep[predicting the category given feature information, see][]{shepard1961learning,nosofsky1994comparing} and inference \citep[predicting unobserved features given observed features and a category label, see][]{markman2003category}. Under this framing, the generation of new category members consists of inferring the {\em all} features given a novel category label. Thus, we can make progress in developing formal theories of creative generation by extending theories of categorization to the task of category generation.
 
-In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on classification \citep[predicting the category given feature information, see][]{shepard1961learning,nosofsky1994comparing} and inference \citep[predicting unobserved features given observed features and a category label, see][]{markman2003category}. Under this framing, the generation of new category members consists of inferring the {\em all} features given a novel category label. Thus, we can make progress in developing formal theories of creative generation by extending theories of categorization to the task of category generation.
-
- whereas research in categorization typically addresses how knowledge is used to classify items into known categories  or infer unobserved features of known category members \citep[see][]{markman2003category}. The generation of members of new categories can be considered as a special case of such an inference 
-
-Classification consist of selecting a category label given observed features, and feature inference consists of inferring the value of a missing feature given a set of observed features and a category label, generation of new category members requires individuals to infer all feature values given a novel category label.
-
-
-Many aspects of the creative process, however, are not altogether different from cognitive processes typically studied in laboratories. In particular, creating members of a new category can be considered a form of inference using one's knowledge of categories.
-
-
-
-Computational methods, nonetheless, have proven fruitful in advancing research in a wide variety
 
 
 % Question: How do people create new concepts?
